@@ -26,6 +26,8 @@
 - libout123: Add same interruption handling to out123_write() as to
   unintr_write(), adding EAGAIN to fix bug 342 (thanks to Steffen Nurpmeso)
   for certain ALSA setups.
+- mpg123: Reduce CPU load while just waiting for terminal input
+  (thanks to bolshoytoster on github).
 
 1.30.2
 ------
